src/test/fail/bad_typecast.ly
#[
SyntaxError: Cannot cast type 'integer' to type 'string'.
Where: File "test/fail/bad_typecast.ly" at line 6
]#

10.@(string)
